--- a/novo/config.cfg
+++ b/novo/config.cfg
@@ -1,6 +1,6 @@
-# headless=true
+headless=true
 log=false
-# servidor=mangachan
-servidor=unionmanga
+servidor=mangachan
+# servidor=unionmanga
 
 # comente a linha que nao deseja executar
