--- a/novo/config.cfg
+++ b/novo/config.cfg
@@ -1,6 +1,8 @@
 headless=true
 log=false
-servidor=mangachan
+# servidor=mangachan
+# servidor=golden
+servidor=mangahosted
 # servidor=unionmanga
 
 # comente a linha que nao deseja executar
